# FastAPI-Base-Template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
src/: main.py
src/core/: config.py
src/infra/: __init__.py
src/infra/sqlalchemy/: connection.py
src/infra/sqlalchemy/alembic/: env.py
src/infra/sqlalchemy/models/: base.py
src/utils/: converters.py
